# a1_motor_cpp

./: CMakeLists.txt  README.md
include/serialPort/: SerialPort.h
model/a1_motor/: a1_motor.urdf
model/a1_motor/meshes/: a1_motor.stl  link1.stl  link2.stl
src/: Indy7.cpp  main.cpp
